[iOS] Improve support for <input type="file" webkitdirectory> https://bugs.webkit.org/show_bug.cgi?id=271705 rdar://125457578

Reviewed by Wenson Hsieh.

WKFileUploadPanel now checks for the webkitdirectory attribute, and if present
sets the mode of the UIDocumentPickerViewController to the required
UIDocumentPickerModeOpen rather than UIDocumentPickerModeImport. The contents
of selected directories are then manually imported in order to be uploaded.

* Source/WebKit/UIProcess/ios/forms/WKFileUploadPanel.mm:
(-[WKFileUploadPanel presentWithParameters:resultListener:]):

Canonical link: https://commits.webkit.org/284685@main