Source/WebKit/UIProcess/ios/forms/WKFileUploadPanel.mm
@@ -380,6 +380,7 @@ static NSString * firstUTIThatConformsTo(NSArray<NSString *> *typeIdentifiers, U
     RetainPtr<NSSet<NSString *>> _acceptedUTIs;
     OptionSet<WKFileUploadPanelImagePickerType> _allowedImagePickerTypes;
     CGPoint _interactionPoint;
+    BOOL _allowDirectories;
     BOOL _allowMultipleFiles;
     BOOL _usingCamera;
 #if ENABLE(TRANSCODE_UIIMAGEPICKERCONTROLLER_VIDEO)
@@ -493,6 +494,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     ASSERT(!_listener);
 
     _listener = listener;
+    _allowDirectories = parameters->allowDirectories();
     _allowMultipleFiles = parameters->allowMultipleFiles();
     _interactionPoint = [_view lastInteractionLocation];
 
@@ -819,12 +821,17 @@ static NSSet<NSString *> *UTIsForMIMETypes(NSArray *mimeTypes)
 - (void)showFilePickerMenu
 {
     NSArray *mediaTypes = [_acceptedUTIs allObjects];
-    NSArray *documentTypes = mediaTypes.count ? mediaTypes : @[ UTTypeItem.identifier ];
+    NSArray *documentTypes;
+    if (_allowDirectories)
+        documentTypes = @[ UTTypeFolder.identifier ];
+    else
+        documentTypes = mediaTypes.count ? mediaTypes : @[ UTTypeItem.identifier ];
 
     _uploadFileManager = adoptNS([[NSFileManager alloc] init]);
     _uploadFileCoordinator = adoptNS([[NSFileCoordinator alloc] init]);
 
-    _documentPickerController = adoptNS([[UIDocumentPickerViewController alloc] initWithDocumentTypes:documentTypes inMode:UIDocumentPickerModeImport]);
+    auto pickerMode = _allowDirectories ? UIDocumentPickerModeOpen : UIDocumentPickerModeImport;
+    _documentPickerController = adoptNS([[UIDocumentPickerViewController alloc] initWithDocumentTypes:documentTypes inMode:pickerMode]);
     [_documentPickerController setAllowsMultipleSelection:_allowMultipleFiles];
     [_documentPickerController setDelegate:self];
     [_documentPickerController presentationController].delegate = self;
@@ -837,11 +844,14 @@ static NSSet<NSString *> *UTIsForMIMETypes(NSArray *mimeTypes)
 {
     // FIXME 49961589: Support picking media with UIImagePickerController
 #if HAVE(UICONTEXTMENU_LOCATION)
-    if (_allowedImagePickerTypes.containsAny({ WKFileUploadPanelImagePickerType::Image, WKFileUploadPanelImagePickerType::Video }))
+    // If directories are allowed or no image/video types are accepted, skip showing the context menu.
+    if (!_allowDirectories && _allowedImagePickerTypes.containsAny({ WKFileUploadPanelImagePickerType::Image, WKFileUploadPanelImagePickerType::Video }))
         self.contextMenuPresenter.present(_interactionPoint);
-    else // Image and Video types are not accepted so bypass the menu and open the file picker directly.
-#endif
+    else
         [self showFilePickerMenu];
+#else
+    [self showFilePickerMenu];
+#endif
 
     // Clear out the view controller we just presented. Don't save a reference to the UIDocumentPickerViewController as it is self dismissing.
     _presentationViewController = nil;
@@ -953,11 +963,26 @@ static NSString *displayStringForDocumentsAtURLs(NSArray<NSURL *> *urls)
     [self _dismissDisplayAnimated:YES];
 
     dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_DEFAULT, 0), makeBlockPtr([retainedSelf = retainPtr(self), urlsFromUIKit = retainPtr(urlsFromUIKit)] () mutable {
+        // When using UIDocumentPickerModeOpen, which is required for selecting directories, urlsFromUIKit consists of urls
+        // pointing directly to selected items rather than imported copies of the items.
+        bool filesImportedByUIKit = !retainedSelf->_allowDirectories;
         RetainPtr<NSMutableArray<NSURL *>> maybeMovedURLs = adoptNS([[NSMutableArray alloc] initWithCapacity:urlsFromUIKit.get().count]);
-        for (NSURL *originalURL in urlsFromUIKit.get()) {
-            auto [success, maybeMovedURL, temporaryURL] = [WKFileUploadPanel _moveToNewTemporaryDirectory:originalURL fileCoordinator:retainedSelf->_uploadFileCoordinator.get() fileManager:retainedSelf->_uploadFileManager.get() asCopy:NO];
+        for (NSURL *url in urlsFromUIKit.get()) {
+            if (!filesImportedByUIKit)
+                [url startAccessingSecurityScopedResource];
 
-            if (maybeMovedURL)
+            // If the file hasn't already been imported by UIKit, we must import it into a new temporary directory ourselves
+            // and leave the original intact. If it has been imported by UIKit, we must move the imported file into a new temporary
+            // directory as a workaround for rdar://136776473.
+            auto [success, maybeMovedURL, temporaryURL] = [WKFileUploadPanel _moveToNewTemporaryDirectory:url fileCoordinator:retainedSelf->_uploadFileCoordinator.get() fileManager:retainedSelf->_uploadFileManager.get() asCopy:!filesImportedByUIKit];
+
+            if (!filesImportedByUIKit)
+                [url stopAccessingSecurityScopedResource];
+
+            // If the selected item was initially imported by UIKit, we have some copy of it to try to upload regardless
+            // of whether or not the move operation succeeded. If the file hadn't already been imported and doing so
+            // ourselves was unsuccessful, we have no copy to upload.
+            if (maybeMovedURL && (filesImportedByUIKit || success))
                 [maybeMovedURLs addObject:maybeMovedURL.get()];
 
             if (temporaryURL)
